Changelog for JErgometer
""""""""""""""""""""""""

//== 0.7.3 ==

== 0.7.2 ==

2009-11-28
* [stefan]  * fixed bug #153: "Edit" not available in program menu anymore

== 0.7.1 ==

2009-11-21
* [stefan]  * implemented feature #148: add "rename" menu entry to popup of program tree
            * fixed bug #149: JErgometer hangs when launched the editor
            * fixed bug #151: pressing F5 on a selected bike program does not update the program
            * fixed bug #150: empty directories look like files in the program tree
            * implemented feature #152: add "create directory" to program tree popup

== 0.7.0 ==

2009-09-20
* [stefan]  * implemented feature #138: allow copying programs in the program tree
            * fixed bug #146: update of the program tree via F5 does not work
            * implemented enhancement #147: change shortcut to edit program files to F4

2009-09-19
* [stefan]  * implemented enhancement issue #144: programs and subdirectores in the program tree should be alphabetically sorted
            * implemented feature issue #145: add menu entry to update program tree

2009-06-07
* [stefan]  * solved issue #139: stop button is not disabled after start of JErgometer
            * implemented feature issue #140: add a performance value to progress graph

== 0.6.8 ==

2009-05-19
* [stefan]  * added popup to program table
            * programs can be directly deleted in JErgometer
            * programs can be opened in user's favorite XML editor
            * added a configuration option in settings window to set favorite text/xml editor

2009-05-15
* [stefan]  * added popup to session table

2009-05-14
* [stefan]  * implemented enhancement issue #6: show status of recording and disable start / stop buttons if recording / not recording
            * implemented enhancement issue #136: inform user about connection problems
            * enhanced error messages
            * solved crash issue #137: jergometer crashes under ubuntu jaunty
